<resources>
    <!-- General app strings -->
    <string name="app_name">Ride to Gather</string>

    <!-- Activity names/labels/titles -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Ride to Gather</string>
    <string name="title_activity_eventrides">Event rides</string>
    <string name="title_activity_ridecreation">Creating a new ride</string>
    <string name="title_activity_ridepage">Ride page</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_joinride">Join ride</string>


    <!-- Settings -->
    <string name="pref_title_notifications_settings">Notify me when…</string>
    <string name="pref_title_notification_when_my_request_is_accepted">My join request is accepted</string>
    <string name="pref_title_notification_when_my_request_is_rejected">My join request is rejected</string>
    <string name="pref_title_notification_when_someone_cancels_a_ride_i_am_in">My ride is canceled</string>
    <string name="pref_title_notification_when_someone_requests_to_join_me">Someone asks to join my ride</string>
    <string name="pref_title_notification_when_someone_cancels_their_pickup">Someone cancels their pick-up</string>
    <string name="pref_key_notification_when_my_request_is_accepted">KEY_PREF_MY_REQUEST_ACCEPTED</string>
    <string name="pref_key_notification_when_my_request_is_rejected">KEY_PREF_MY_REQUEST_REJECTED</string>
    <string name="pref_key_notification_when_someone_cancels_a_ride_i_am_in">KEY_PREF_MY_RIDE_IS_DELETED</string>
    <string name="pref_key_notification_when_someone_requests_to_join_me">KEY_PREF_REQUEST_FOR_ME</string>
    <string name="pref_key_notification_when_someone_cancels_their_pickup">KEY_PREF_PICKUP_CANCEL</string>

    <!-- Notifications -->
    <string name="notification_title_pickup_accepted">Pick-up accepted</string>
    <string name="notification_title_pickup_rejected">Pick-up rejected</string>
    <string name="notification_title_ride_canceled">Ride canceled</string>
    <string name="notification_title_new_pickup">Pick-up request</string>
    <string name="notification_title_left_ride">Passenger left</string>

    <!-- Main activity -->
    <string name="temp_button_label_switch_user">(temp) Switch to other user</string>

    <!-- Facebook login activity -->
    <string name="login_again">try again</string>
    <string name="exit_login">exit</string>
    <string name="stay">return to app</string>
    <string name="leave">log out</string>
    <string name="facebook_log_out">Log out</string>

    <!-- Event Rides -->
    <string name="content_description_profile_picture">Profile picture</string>
    <string name="action_open_event_on_facebook">Open on Facebook</string>
    <string name="action_leave_group">Leave group</string>
    <string name="leave_group">Yes</string>
    <string name="stay_group">No, stay</string>

    <!-- Ride -->
    <string name="driver_name">Name</string>
    <string name="car_model">Model</string>
    <string name="car_color">Color</string>
    <string name="departure_time_default_value">00:00</string>
    <string name="ride_origin">Origin</string>
    <string name="ride_details">Details:</string>
    <string name="action_edit_ride">Edit ride</string>
    <string name="action_delete_ride">Delete ride</string>
    <string name="delete_ride_title">Delete ride</string>
    <string name="delete_ride_are_you_sure">Are you sure you want to permanently delete this ride?</string>
    <string name="credits">Credits</string>
    <string name="join_ride">Join ride</string>
    <string name="request_is_pending">Request is pending</string>
    <string name="request_declined">Request declined</string>
    <string name="request_accepted">You are in this ride!</string>
    <string name="leave_ride">Leave ride</string>
    <string name="cancel_request">Cancel request</string>
    <string name="ride_map">Ride map</string>
    <string name="edit_route">Edit route</string>
    <string name="view_requests">View requests</string>
    <string name="cancel_request_are_you_sure">Your request is pending until the driver approves it. Would you like to cancel the request?</string>
    <string name="leave_ride_are_you_sure">Are you sure you want to leave this ride?</string>
    <string name="toast_join_ride_success">Request sent!</string>
    <string name="toast_join_ride_cancel">Canceled join.</string>
    <string name="toast_cancel_request_success">Request canceled!</string>
    <string name="toast_leave_ride_success">Left ride!</string>
    <string name="toast_ride_map_edit_success">Updated ride map!</string>
    <string name="passengers_summary_for_passenger">%d/%d passengers</string>
    <string name="passengers_summary_for_driver_single">%d/%d passengers + %d request</string>
    <string name="passengers_summary_for_driver_plural">%d/%d passengers + %d requests</string>

    <!-- Pickup -->
    <string name="passenger_name">Name</string>
    <string name="passenger_pickup_spot">Spot</string>
    <string name="passenger_pickup_time_default_value">00:00</string>
    <string name="choose_a_pick_up_location">Choose a pickup location!</string>

    <!-- Map -->
    <string name="pickup_decline_title">Decline request</string>
    <string name="pickup_decline_description">Do you want to decline %s\'s request to join your ride?</string>

    <!-- Slider -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="welcome_screen_1_text">Share your ride with others.</string>
    <string name="welcome_screen_2_text">Join other rides.</string>
    <string name="welcome_screen_3_text">Get to the event and meet new people!</string>

    <!-- Error strings -->
    <string name="error_field_required">This field is required</string>
    <string name="error_nonpositive_passenger_count">Sorry, currently only positive numbers of passengers are allowed
        ;)
    </string>
    <string name="weird_error">Weird error - this should not happen</string>

    <!-- Miscellaneous strings-->
    <string name="logging_in">Logging in…</string>
    <string name="updating">(Updating…)</string>
    <string name="loading">(Loading…)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Decline</string>
    <string name="null_string">null_string</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_you_want_to_join_event">There is already a group for this event, do you want to join?</string>

</resources>
