<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="category_notification_settings"
        android:title="@string/pref_title_notifications_settings">

        <SwitchPreference
            android:key="@string/pref_key_notification_when_my_request_is_accepted"
            android:title="@string/pref_title_notification_when_my_request_is_accepted" />
        <SwitchPreference
            android:key="@string/pref_key_notification_when_my_request_is_rejected"
            android:title="@string/pref_title_notification_when_my_request_is_rejected" />
        <SwitchPreference
            android:key="@string/pref_key_notification_when_someone_cancels_a_ride_i_am_in"
            android:title="@string/pref_title_notification_when_someone_cancels_a_ride_i_am_in" />
        <SwitchPreference
            android:key="@string/pref_key_notification_when_someone_requests_to_join_me"
            android:title="@string/pref_title_notification_when_someone_requests_to_join_me" />
        <SwitchPreference
            android:key="@string/pref_key_notification_when_someone_cancels_their_pickup"
            android:title="@string/pref_title_notification_when_someone_cancels_their_pickup" />

    </PreferenceCategory>
</PreferenceScreen>