<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/passengerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_name" />

            <TextView
                android:id="@+id/pickupSpot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_pickup_spot" />

            <TextView
                android:id="@+id/pickupTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_pickup_time_default_value" />
        </LinearLayout>

        <ImageView
                android:id="@+id/PassengerProfilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="90"
                tools:ignore="ContentDescription"/>
    </LinearLayout>
</android.support.v7.widget.CardView>